# scout-ai

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: a1404614fc25_initial_schema.py  b2e9f1a4d8c3_add_kickoff_offset_and_player_name.py
apps/backend/src/scout_ai_backend/: main.py
apps/backend/src/scout_ai_backend/api/: deps.py
apps/backend/src/scout_ai_backend/api/v1/: health.py  matches.py  router.py
apps/backend/src/scout_ai_backend/core/: config.py
apps/backend/src/scout_ai_backend/domain/entities/: match.py  player.py  report.py  statistics.py
apps/backend/src/scout_ai_backend/domain/services/: match_processor.py  match_service.py
apps/backend/src/scout_ai_backend/infrastructure/ai/: prompt.py  providers.py
apps/backend/src/scout_ai_backend/infrastructure/database/: models.py  repository.py  session.py
apps/backend/src/scout_ai_backend/infrastructure/storage/: local_storage.py
apps/backend/src/scout_ai_backend/infrastructure/vision/: pipeline.py
apps/backend/src/scout_ai_backend/schemas/: match.py
apps/backend/tests/: test_health.py
apps/frontend/: package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/matches/: page.tsx
apps/frontend/src/config/: env.ts  feature-flags.ts
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: architecture.md  contributing.md  deployment.md  setup.md
(+30 files in other folders)
